--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
   </head>
   <body>
     <h1>MERN TEMPLATE</h1>
-    <img src="./bale.jpg"  alt="bale" />
+    <!-- <img src="./bale.jpg"  alt="bale" /> -->
+    <button id="fetch">Fetch Data</button>
+    <p id="data"></p>
+    <script>
+      const fetchBtn = document.getElementById("fetch");
+      const data = document.getElementById("data");
+
+      fetchBtn.addEventListener("click", async () => {
+        const response = await fetch("/v1/planets");
+        const json = await response.json();
+        data.innerText = JSON.stringify(json);
+      });
+    </script>
   </body>
 </html>
